--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
       referrerpolicy="no-referrer"
     /> -->
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Starter_BoilerPlate</title>
+    <title>Dad_Jokes</title>
   </head>
   <body>
-    <h1>Hello, This is starter Boiler_Plate...</h1>
+    <div class="container">
+      <h3>Don't Laugh Challenge</h3>
+      <div class="joke" id="joke">
+        <!-- Jokes Goes here... -->
+      </div>
+      <button id="jokebtn" class="btn">Get Another Joke</button>
+    </div>
 
     <script src="script.js"></script>
   </body>
