--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="joke" id="joke">
         <!-- Jokes Goes here... -->
       </div>
-      <button id="jokebtn" class="btn">Get Another Joke</button>
+      <button id="jokeBtn" class="btn">Get Another Joke</button>
     </div>
 
     <script src="script.js"></script>
