Added the meaningful comments to the HTML file...

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <title>Dad_Jokes</title>
   </head>
   <body>
+    <!-- This is the main container to hold the whole project... -->
     <div class="container">
       <h3>Don't Laugh Challenge</h3>
+      <!-- This is where the jokes aer to be displayed... -->
       <div class="joke" id="joke">
         <!-- Jokes Goes here... -->
       </div>
+      <!-- This is the button to refresh for getting new jokes... -->
       <button id="jokeBtn" class="btn">Get Another Joke</button>
     </div>
 
